--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NormalizedTemplate</title>
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
+    <title>@ViewData["Title"] - VanillaMVC</title>
     <link rel="stylesheet" href ="~/css/normalize.css"/>
     <link rel="stylesheet" href="~/css/site.css" />
-    @*<link rel="stylesheet" href="~/NormalizedTemplate.styles.css" asp-append-version="true" />*@
+    <link rel="stylesheet" href="~/VanillaMVC.styles.css" asp-append-version="true" />
 </head>
 <body>
     
@@ -34,11 +33,10 @@
     @*Footer*@
     <footer>
         <div>
-            &copy; 2022 - NormalizedTemplate - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - VanillaMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    @*<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     </div>
