--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using NormalizedTemplate
-@using NormalizedTemplate.Models
+﻿@using VanillaMVC
+@using VanillaMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
