--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,77 +1,44 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SaltyBook</title>
-    @* fonts *@
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-    @* css *@
-    <link rel="stylesheet" href="~/css/normalize.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @* <link rel="stylesheet" href="~/SaltyBook.styles.css" asp-append-version="true" /> *@
+    <title>@ViewData["Title"] - VanillaMVC</title>
+    <link rel="stylesheet" href ="~/css/normalize.css"/>
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/VanillaMVC.styles.css" asp-append-version="true" />
 </head>
-
-@{
-    string theme = "light-theme";
-
-    void switchTheme()
-    {
-        if (theme == "light-theme")
-        {
-            theme = "dark-theme";
-        }
-        else
-        {
-            theme = "light-theme";
-        }
-    }
-}
-
-<body class="@theme">
-    <div class="container--site">
-        <header class="header">
-            @*Navbar*@
-            <nav class="navbar">
-                <div class="navbar-link-container">
-                    <button id="theme-btn" onclick="@(() => switchTheme())">🌘</button>
-                    @*Page links*@
-                    <ul class="navbar-link-list">
-                        <li>
-                            <a class="navbar-link-list-item" asp-area="" asp-controller="Home"
-                                asp-action="Index">Home</a>
-                        </li>
-                        <li>
-                            <a class="navbar-link-list-item" asp-area="" asp-controller="Home"
-                                asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        @*Main view*@
-        <div class="container--main-view">
-            <main role="main" id="main-view">
-                @RenderBody()
-            </main>
-        </div>
-        @*Footer*@
-        <footer class="footer">
-            <div class="footer-info">
-                &copy; 2022 - Salsss @theme <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </footer>
+<body>
+    
+    <header>
+        @*Navbar*@
+        <nav >
+            @*Page links*@
+            <ul>
+                <li >
+                    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    @*Main view*@
+    <div >
+        <main role="main">
+            @RenderBody()
+        </main>
     </div>
+    @*Footer*@
+    <footer>
+        <div>
+            &copy; 2022 - VanillaMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-
-
-    }
+    </div>
 </body>
-
 </html>
